Change global font to comic sans ms

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
-    background-color: aquamarine;
+    background-color: #7fffd4;
+    font-family: 'Comic Sans MS', 'Courier New', Georgia, serif;
 }
 
 h1 {
