Clean up landing page
Rename the website again. Add a subheading under
the image titled "Recipes". Center h2 headings.
Create a div to contain the links in the landing
page. Center the container div.

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     font-family: 'Comic Sans MS', 'Courier New', Georgia, serif;
 }
 
-h1 {
+h1, h2 {
     text-align: center;
 }
 
@@ -11,4 +11,9 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.container {
+    width: fit-content;
+    margin: auto;
 }
