--- a/website/styles.css
+++ b/website/styles.css
@@ -8,6 +8,10 @@ h1, h2 {
     text-align: center;
 }
 
+p {
+    text-align: center;
+}
+
 img {
     display: block;
     margin-left: auto;
@@ -22,4 +26,8 @@ img {
 .home-link {
     display: block;
     text-align: center;
+}
+
+.shared-line {
+    display: inline-block;
 }
